k8s/minikube/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: collector-ingress
  namespace: collector
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - collector.local
      secretName: collector-tls
  rules:
    - host: collector.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000
          - path: /api-docs
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000
          - path: /internal/grafana
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000
          - path: /health
            pathType: Exact
            backend:
              service:
                name: api
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
